--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -11,5 +11,5 @@ dependencies {
     testImplementation("org.apache.commons:commons-text:$commonsTextVersion")
     testImplementation("com.github.meanbeanlib:meanbean:$meanbeanVersion")
     testImplementation("org.junit.jupiter:junit-jupiter:$junitJupiterVersion")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:$junitPlatformLauncherVersion")
 }
